--- a/index.html
+++ b/index.html
@@ -1,133 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
     />
-    <link rel="icon" type="image/png" href="img /techis-logo.png">
+    <link rel="icon" type="image/png" href="img /techis-logo.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-        <!-- container, adjust the width for each device -->
-        <div class="container">
-          <!-- navbar-brand, for your company, product , or project name.-->
-          <a class="navbar-brand title-icon" href="#"
-            ><span class="font-primary">P</span>ortfolio</a
-          >
-          <!-- navbar-toggler,for use with our collapse plugin and other navigation toggling behaviors -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarToggler"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- . collapse .navbar-collapse, for grouping and hiding navbar contents by a parent breakpoint-->
-          <div class="collapse navbar-collapse" id="navbarToggler">
-            <!-- navbar-nav, for a full-height and lightweight navigation -->
-            <!-- ms-auto, for pushing items to the left -->
-            <!-- mb-2, for a margin bottom for 2  levels-->
-            <ul class="navbar-nav ms-auto mb-2">
-              <li class="nav-item">
-                <a class="nav-link font-black" href="#about">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link font-black" href="#project">Projects</a>
-              </li>
-            </ul>
-          </div>
+      <!-- container, adjust the width for each device -->
+      <div class="container">
+        <!-- navbar-brand, for your company, product , or project name.-->
+        <a class="navbar-brand title-icon" href="#"
+          ><span class="font-primary">P</span>ortfolio</a
+        >
+        <!-- navbar-toggler,for use with our collapse plugin and other navigation toggling behaviors -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- . collapse .navbar-collapse, for grouping and hiding navbar contents by a parent breakpoint-->
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <!-- navbar-nav, for a full-height and lightweight navigation -->
+          <!-- ms-auto, for pushing items to the left -->
+          <!-- mb-2, for a margin bottom for 2  levels-->
+          <ul class="navbar-nav ms-auto mb-2">
+            <li class="nav-item">
+              <a class="nav-link font-black" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link font-black" href="#project">Projects</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-  <div id= "about">
+      </div>
+    </nav>
+    <div id="about">
       <h2><span class="font-primary">A</span>bout</h2>
-      <img src="img /Screen Shot 2022-02-03 at 8.23.58 PM.png" alt="This is my image">
+      <img
+        src="img /Screen Shot 2022-02-03 at 8.23.58 PM.png"
+        alt="This is my image"
+      />
       <div class="name">Shivam Desai</div>
       <div class="vocation">Web Application Developer</div>
-      <div class="skills">HTML / CSS / JavaScript / React.Js / Redux / Django / Python</div>
-      <p>An SPA that displays subreddit data from Reddit for a specific time
+      <div class="skills">
+        HTML / CSS / JavaScript / React.Js / Redux / Django / Python
+      </div>
+      <p>
+        An SPA that displays subreddit data from Reddit for a specific time
         period. As front end developer ive worked on many projects using various
-        languages.</p>
-        <div class="email">shivam.1234desai@gmail.com</div>
-        <div class="icons">
-            <a href="https://github.com/shivam4198"><i class=" bi bi-github"></i></a>
-            <a href="www.linkedin.com/in/shivam-desai-95509b1a7"><i class=" bi bi-linkedin ms-2"></i></a>
-        </div>
-  </div>
- <div id="project">
-    <h2><span class="font-primary">P</span>roject</h2>
-    <div class="card mb-3">
+        languages.
+      </p>
+      <div class="email">shivam.1234desai@gmail.com</div>
+      <div class="icons">
+        <a href="https://github.com/shivam4198"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/desai98"
+          ><i class="bi bi-linkedin ms-2"></i
+        ></a>
+      </div>
+    </div>
+    <div id="project">
+      <h2><span class="font-primary">P</span>roject</h2>
+      <div class="card mb-3">
         <div class="row">
-            <div class="col-md-4">
-                <img src="img /project-twitter.png" class= 'img-fluid rounded-start' alt="Twitter clone project">
-
+          <div class="col-md-4">
+            <video class="project-video" autoplay controls muted>
+              <source src="video/money-tracker.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Money Tracker</h5>
+              <p class="card-text">
+                <strong>Project Description: </strong>This project is an online
+                ledger to help you track your expenditure and income accurately
+                and effectively monitor your spending. It is created in a
+                user-friendly manner are diagrammatic and graphical
+                representations to enhance your understanding, save you time
+                from the tedious process of bookkeeping, giving you the ability
+                to sync and manage your entire bookkeeping in a single app.
+                <br /><br />
+                <strong>Skills Used: </strong>FrontEnd: React-Redux | Backend:
+                Django API.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  Tese Login Account <br />
+                  Email :test@gmail.com <br />
+                  Password: 1234
+                </small>
+              </p>
+              <a
+                href="https://money-tracker-frontend.herokuapp.com/"
+                target="_blank"
+                class="btn btn-secondary"
+                >Website Link</a
+              >
+              <a
+                href="https://github.com/MoneyTrackerSKF/MoneyTracker.git"
+                target="_blank"
+                class="btn btn-secondary"
+                >Github Link</a
+              >
             </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title">Twitter Clone</h5>
-                    <p class="card-text"> This is a twitter based project made using the django</p>
-                    <p class="card-text">
-                        <small class="text-muted">
-                            Tese Login Account <br>
-                            Email :test@gmail.com <br>
-                            Password: 1234
-                        </small>
-                    </p>
-                    <a href="#" target="_blank" class='btn btn-secondary'>Website Link</a>
-                    <a href="#" target="_blank" class='btn btn-secondary'>Github Link</a>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <video class="project-video" autoplay controls muted>
+              <source src="video/cooltees.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Cool-Tees</h5>
+              <p class="card-text">
+                <strong>Project Description: </strong>A convenient and fun way
+                to browse featured clothing & accessories from some of the best
+                clothing brands online, especially aimed at teenagers. With this
+                web app, you can browse products by any color you like or by
+                trending colors, save products into favorites, and share
+                products with friends on social media.
+
+                <br /><br />
+                <strong>Skills Used: </strong>FrontEnd: React-Redux | Backend:
+                Django API.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  Tese Login Account <br />
+                  Email :test@gmail.com <br />
+                  Password: 1234
+                </small>
+              </p>
+              <a
+                href="https://frontend-cool-tees-shop.herokuapp.com/"
+                target="_blank"
+                class="btn btn-secondary"
+                >Website Link</a
+              >
+              <a
+                href="https://github.com/shivam4198/Cool-Tees.git"
+                target="_blank"
+                class="btn btn-secondary"
+                >Github Link</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <video class="project-video" autoplay controls muted>
+              <source src="video/shivam-twitter.mov" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Twitter Clone</h5>
+              <p class="card-text">
+                <strong>Project Description: </strong>With this project, we
+                created a platform where you can express your thoughts
+                anonymously, showcase your pictures, and much more on a single
+                website. Post, edit, or delete posts at the convenience of just
+                a few touches. This project is based on Twitter and anonymity
+                adds to its special features. Without the necessity of an
+                account, you can share your thoughts and memories with the world
+                at any time. You can even learn CRUD(Create/Read/Update/Delete)
+                through this project.
+
+                <br /><br />
+                <strong>Skills Used: </strong>HTML / CSS / Django / Cloudinary
+              </p>
+
+              <a
+                href="https://twitter-clone-shivam.herokuapp.com/"
+                target="_blank"
+                class="btn btn-secondary"
+                >Website Link</a
+              >
+              <a
+                href="https://github.com/shivam4198/Twitter-clone.git"
+                target="_blank"
+                class="btn btn-secondary"
+                >Github Link</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="card mb-3">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="img /project-netflix.png" class= 'img-fluid rounded-start' alt="Twitter clone project">
-
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title">Netflix Clone</h5>
-                    <p class="card-text"> This is a netflix based project made using the django</p>
-                    <p class="card-text">
-                        <small class="text-muted">
-                            Tese Login Account <br>
-                            Email :test@gmail.com <br>
-                            Password: 1234
-                        </small>
-                    </p>
-                    <a href="#" target="_blank" class='btn btn-secondary'>Website Link</a>
-                    <a href="#" target="_blank" class='btn btn-secondary'>Github Link</a>
-                </div>
-            </div>
-        </div>
-    </div>
- </div>
-  
-  
-  
-  
-  
- <script
- src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
- integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
- crossorigin="anonymous"
-></script>
-  
-  
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
