modified email id

--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
         HTML / CSS / JavaScript / React.Js / Redux / Django / Python
       </div>
       <p>
-        An SPA that displays subreddit data from Reddit for a specific time
-        period. As front end developer ive worked on many projects using various
+        As front end developer, I have worked on many projects using various
         languages.
       </p>
-      <div class="email">shivam.1234desai@gmail.com</div>
+      <div class="email">desai.shivam1498@gmail.com</div>
       <div class="icons">
         <a href="https://github.com/shivam4198"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/desai98"
